# pedestrian-detector

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
lib/: common.h  imagedatabase.h
